@@ -9,6 +9,7 @@ Version 0.3x
 ------------
 * Fixed broken Vena restoration (doesn't loop anymore).
 * Removed ability for Lagon to impregnate your butt.
+* Fixed a bug that gave Terry perpeptual pregnancy.
 
 --------------------------------------------
              PREVIOUS VERSIONS
